# stratum-tool

./: .gitignore  README.md  StratumClient.hs  debianize  publish  stratum-tool.cabal
debian/: .gitignore  changelog  control  haskell-stratum-tool-utils.install  rules  watch
src/: BitPay.hs  Common.hs  Main.hs  PrettyJson.hs  StratumClient.hs
src-nossl/: Connection.hs
src-ssl/: Connection.hs
