name:          stratum-tool
version:       0.0.1
synopsis:      StratumTool
description:   Connects to Electrum server via Stratum protocol and
	       allows querying wallet balances etc. in user friendly output format
category:      Utils
license:       AGPL-3
license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/zouppen/stratum-tool.git

executable stratum-tool
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    aeson >= 0.6.0.2,
    async >= 2.0.1.5,
    base >= 4.2.0.2,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.9.5,
    containers >= 0.4.2.1,
    network >= 2.3.0.13,
    stm >= 2.4,
    text >= 0.11.2.0,
    -- This will ensure Builder support in old environments
    bytestring-builder >= 0.10.4.0.1,
    -- Any version of vector do because aeson will restrict it anyway
    vector
